update MUI from `468492d1` to `30c189cd` (#4)
* update MUI from `468492d1` to `30c189cd` (WIP)

* ImageUtil with cleanups to error handling

* Finish updating MUI from `468492d1` to `30c189cd`

* actually initialize all the manager classes

* register testing items when in dev